	* optimized disk cache to work with large caches
	* support variable number of optimistic unchoke slots and to dynamically
	  adjust based on the total number of unchoke slots
	* support for BitTyrant choker algorithm
	* support for automatically start torrents when they receive an
	  incoming connection
	* added more detailed instrumentation of the disk I/O thread

	* fixed bug in web_peer_connection which could cause a hang when downloading
	  from web servers
	* fixed bug in metadata extensions combined with encryption
	* refactored socket reading code to not use async. operations unnecessarily
	* some timer optimizations
	* removed the reuse-address flag on the listen socket
	* fixed bug where local peer discovery and DHT wouldn't be announced to without trackers
	* fixed bug in bdecoder when decoding invalid messages
	* added build warning when building with UNICODE but the standard library
	  doesn't provide std::wstring
	* fixed add_node python binding
	* fixed issue where trackers wouldn't tried immediately when the previous one failed
	* fixed synchronization issue between download queue and piece picker
	* fixed bug in udp tracker scrape response parsing
	* fixed bug in the disk thread that could get triggered under heavy load
	* fixed bug in add_piece() that would trigger asserts
	* fixed vs 2010 build
	* recognizes more clients in identify_client()
	* fixed bug where trackers wouldn't be retried if they failed
	* slight performance fix in disk elevator algorithm
	* fixed potential issue where a piece could be checked twice
	* fixed build issue on windows related to GetCompressedSize()
	* fixed deadlock when starting torrents with certain invalid tracker URLs
	* fixed iterator bug in disk I/O thread
	* fixed FIEMAP support on linux
	* fixed strict aliasing warning on gcc
	* fixed inconsistency when creating torrents with symlinks
	* properly detect windows version to initialize half-open connection limit